--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
     compile 'com.gordonwong:material-sheet-fab:1.2.1'
-
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile 'junit:junit:4.12'
-    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
-        transitive = true
-    }
 }
