--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pranitkulkarni.expensemanager">
 
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,7 +28,8 @@
             android:name=".bank_accounts.ShowAllAccounts"
             android:label="@string/title_activity_show_all_accounts"
             android:theme="@style/AppTheme" />
-        <activity android:name=".transactions.AddTransfer"></activity>
+        <activity android:name=".transactions.AddTransfer" />
+        <activity android:name=".currency.SelectCurrency"></activity>
     </application>
 
 </manifest>
